compiler/testData/diagnostics/testsWithStdLib/hugeUnresolvedKotlinxHtml.kt
class A {
    fun bar() {
        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                    <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                        <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                            <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                                <!UNRESOLVED_REFERENCE_WRONG_RECEIVER!>div<!> {
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                }
                                                                                            }
                                                                                        }
                                                                                    }
                                                                                }
                                                                            }
                                                                        }
                                                                    }
                                                                }
                                                            }
                                                        }

                                                    }
                                                }
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}
